--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "bc-nc-news",
   "main": "listen.js",
   "scripts": {
-    "setup-dbs": "psql -f ./db/setup-dbs.sql",
-    "seed-dev": "node ./db/seeds/run-seed.js",
-    "test": "jest --runInBand",
-    "prepare": "husky install",
     "start": "node listen.js",
-    "test-seed": "jest seed.test.js"
+    "seed-prod": "NODE_ENV=production npm run seed",
+    "seed": "node ./db/seeds/run-seed.js"
   },
   "repository": {
     "type": "git",
@@ -25,13 +22,16 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
-    "jest-extended": "^2.0.0"
+    "jest-extended": "^2.0.0",
+    "prettier": "^3.8.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "pg": "^8.13.3"
+    "express": "^5.2.1",
+    "pg": "^8.13.3",
+    "supertest": "^7.2.2"
   },
-   "jest": {
+  "jest": {
     "setupFilesAfterEnv": [
       "jest-extended/all"
     ]
